# VEXU_GHOST

./: .gitignore  .gitmodules  Dockerfile  README.md  SetupMyEnvironment.md  drive_accel_bags.zip:C7140AA6-7976-4D71-9C3A-F8BD5BCEF8DD  robots.yaml  uncrustify.cfg
01_Libraries/ghost_common/: CMakeLists.txt  package.xml
01_Libraries/ghost_common/src/: load_robot_config.cpp  v5_robot_config.cpp  v5_robot_config_defs.cpp
01_Libraries/ghost_common/test/: test_angle_util.cpp  test_config_structs.cpp  test_load_config_yaml.cpp  test_parsing_util.cpp
01_Libraries/ghost_control/: CMakeLists.txt  package.xml
01_Libraries/ghost_control/src/: casadi_swerve_model_generation.cpp  motor_controller.cpp  swerve_model_test_main.cpp
01_Libraries/ghost_control/test/: test_dc_motor_model.cpp  test_motor_controller.cpp
01_Libraries/ghost_estimation/: CMakeLists.txt  package.xml
01_Libraries/ghost_interfaces/: CMakeLists.txt  package.xml
01_Libraries/ghost_interfaces/src/: v5_robot_config.cpp  v5_robot_config_defs.cpp
01_Libraries/ghost_interfaces/test/: test_config_structs.cpp  test_load_config_yaml.cpp
01_Libraries/ghost_planners/: CMakeLists.txt  package.xml
01_Libraries/ghost_planners/config/: casadi_example_model_generation.yaml
01_Libraries/ghost_planners/src/: casadi_swerve_model_generation.cpp  cubic_motion_planner.cpp  ipopt_iteration_callback.cpp  robot_trajectory.cpp  swerve_model_test_main.cpp  trajectory.cpp
01_Libraries/ghost_planners/test/: test_robot_trajectory.cpp  (+1 more)
01_Libraries/ghost_serial/: CMakeLists.txt  package.xml
01_Libraries/ghost_util/: CMakeLists.txt  package.xml
01_Libraries/ghost_v5_core/: CMakeLists.txt  package.xml
01_Libraries/ghost_v5_interfaces/: CMakeLists.txt  package.xml
03_ROS/ghost_autonomy/: CMakeLists.txt  bt.xml  bt_template.btproj  package.xml
03_ROS/ghost_description/: CMakeLists.txt  package.xml
03_ROS/ghost_localization/: CMakeLists.txt  package.xml
03_ROS/ghost_motion_planner_core/: CMakeLists.txt  package.xml
depth/: CMakeLists.txt  package.xml
depth/src/: depth_calculations.cpp
ghost_common/: CMakeLists.txt  package.xml
ghost_common/src/: v5_robot_config.cpp  v5_robot_config_defs.cpp
ghost_common/test/: test_angle_util.cpp  test_parsing_util.cpp
ghost_control/: CMakeLists.txt  package.xml
ghost_control/src/: casadi_swerve_model_generation.cpp  ghost_motor.cpp  motor_controller.cpp  swerve_model_test_main.cpp
ghost_control/test/: test_dc_motor_model.cpp  test_mechanical_differential.cpp
ghost_description/: CMakeLists.txt
ghost_description/urdf/: ghost1.xacro  swerve_macros.xacro
ghost_description/urdf_robomasters/: mecanum_macros.xacro  sentry.xacro
ghost_estimation/: CMakeLists.txt  package.xml
ghost_msgs/: CMakeLists.txt  package.xml
ghost_msgs/msg/: ActuatorCommands.msg  CVDisc.msg  CVDiscList.msg  CVObjList.msg  DepthQuery.msg  DepthReturn.msg  GhostRobotState.msg  Pose2D.msg  RobotActuatorCommand.msg  RobotStateUpdate.msg  SensorUpdate.msg  V5ActuatorCommand.msg  V5CompetitionState.msg  V5SensorUpdate.msg
ghost_msgs/srv/: BroadcastJacobian.srv
ghost_ros/: CMakeLists.txt  package.xml
ghost_ros/config/: GHOST.json  example.yaml  foxglove_diagnostics_config.yaml  ghost_estimator_config.yaml  ghost_serial.yaml  ghost_serial_config.yaml  ghost_state_machine_config.yaml  main_config.yaml  particle_filter.yaml
ghost_ros/include/: main.hpp
ghost_ros/launch/: bag_review.launch.py  cv.launch.py  foxglove_diagnostics.launch.py  hardware.launch.py  joystick.launch.py  rviz.launch.py  start_sim.launch.py  start_sim_pid.launch.py  swerve.launch.py  upload_swerve.launch.py  upload_swerve_pid.launch.py
ghost_ros/maps/: VEXField.txt
ghost_ros/rviz/: cv_config.rviz  urdf_config.rviz
ghost_ros/scripts/: pybullet_rviz_publisher.py  pybullet_swerve_simulator.py
ghost_ros/src/: basic_swerve_controller.cpp  dc_motor_model.cpp  main.cpp
ghost_ros/test/: test_cobs.cpp  test_dc_motor_model.cpp  test_gazebo_swerve_plugin.cpp  test_stamped_queue.cpp
ghost_ros/urdf/: ghost1.xacro  swerve.urdf  swerve_macros.xacro  swerve_pid.urdf
ghost_serial/: CMakeLists.txt
ghost_serial/include/: ghost_serial_node.hpp  v5_serial_node.hpp
ghost_serial/src/: ghost_serial_node.cpp  jetson_v5_serial_node.cpp  v5_serial_node.cpp
ghost_serial/test/: test_cobs.cpp  test_msg_parser.cpp
ghost_sim/: CMakeLists.txt  package.xml
ghost_sim/include/: gazebo_joint_pid_plugin.hpp  odometry_plugin.hpp  sim_main.hpp  swerve_odometry_plugin.hpp  v5_robot_plugin.hpp  v5_sim_node.hpp
ghost_sim/launch/: new_v5_msg_config_test.launch.py  start_sim.launch.py
ghost_sim/src/: gazebo_joint_pid_plugin.cpp  gazebo_motor_plugin.cpp  ground_truth_pose.cpp  ground_truth_pose_publisher.cpp  odometry_plugin.cpp  sim_main.cpp  swerve_odometry_plugin.cpp  v5_robot_plugin.cpp  v5_sim_node.cpp  v5_sim_node_main.cpp
ghost_sim/test/: test_gazebo_swerve_plugin.cpp  test_publisher_v5_actuator_cmd.cpp  test_v5_sim_node.cpp
ghost_sim/urdf/: ghost1_sim_base.xacro  ghost1_sim_pid.xacro  ghost1_sim_voltage.xacro  spin_up.world
ghost_sim/urdf_robomasters/: sentry_base.xacro
ghost_util/: CMakeLists.txt  package.xml
ghost_util/src/: angle_util.cpp
ghost_util/test/: test_angle_util.cpp  test_parsing_util.cpp
sentry_control/: CMakeLists.txt  package.xml
sentry_control/src/: sentry_control.cpp
swerve_drive/: CMakeLists.txt  package.xml
swerve_drive/include/: dc_motor_model.hpp  gazebo_motor_plugin.hpp  gazebo_swerve_plugin.hpp
swerve_drive/launch/: joystick.launch.py  rviz.launch.py  start_sim.launch.py  start_sim_pid.launch.py  swerve.launch.py  upload_swerve.launch.py  upload_swerve_pid.launch.py
swerve_drive/rviz/: urdf_config.rviz
swerve_drive/scripts/: pybullet_swerve_simulator.py
swerve_drive/src/: dc_motor_model.cpp  gazebo_joint_pid_plugin.cpp  gazebo_motor_plugin.cpp  gazebo_swerve_plugin.cpp  pybullet_swerve_simulator.py
swerve_drive/test/: test_dc_motor_model.cpp  test_gazebo_swerve_plugin.cpp
swerve_drive/urdf/: plane.mtl  plane.urdf  spin_up.world  swerve.urdf  swerve_macros.xacro  swerve_pid.urdf
(+1316 files in other folders)
